--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="zakázková výroba dortů a dalších sladkých radostí 🎂"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pandidorty.cz</title>
+    <title>Pandí dorty🐼✨</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
       html {
@@ -16,6 +20,7 @@
         @apply bg-gray-50 text-gray-950 dark:bg-gray-900 dark:text-gray-200;
       }
     </style>
+    <link rel="icon" href="/favicon.ico" />
   </head>
 
   <body>
